css/style.css
/* Reset all formatting */
* {
  margin: 0;
  padding: 0;
}

/* Sections */
#navbar {
  background: #1a1a1a;
}

#footer {
  display: block;
  background-color: #1a1a1a;
  padding: 5px;
}

/* Universal Text Colour */
p {
  color: white;
}

/* Text Alignment */
txtl {
  display: block;
  text-align: left;
}

txtr {
  display: block;
  text-align: right;
}

txtc {
  display: block;
  text-align: center;
}

